--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-gifted-charts": "^1.4.20",
     "react-native-image-picker": "^7.1.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-progress-circle": "^2.1.0",
