--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -44,3 +44,8 @@ newArchEnabled=false
 hermesEnabled=true
 
 android.disableAutomaticComponentCreation=true
+
+MYAPP_RELEASE_STORE_FILE=C:/Sites/metatahNative/android/app/my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=test2012
+MYAPP_RELEASE_KEY_PASSWORD=test2012
