--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-calendars": "^1.1301.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.1",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.2.13",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
