--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tanstack/react-query": "^5.21.7",
     "axios": "^1.6.2",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "i": "^0.3.7",
+    "npm": "^10.9.1",
     "react": "18.2.0",
     "react-native": "^0.71.7",
     "react-native-calendars": "^1.1301.0",
@@ -27,6 +29,7 @@
     "react-native-config": "^1.5.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-date-picker": "^4.2.13",
+    "react-native-dialog": "^9.3.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.2",
